# ksenyaChatBotAdmin

./: .dockerignore  .env  .env.local  .env.prod  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  update.sh
KseniyaChatBotAdmin/: asgi.py  settings.py  urls.py  wsgi.py
apps/channels/: admin.py  apps.py  models.py  signals.py
apps/channels/migrations/: 0001_initial.py  0002_channel_amount.py  0002_remove_channel_amount_channel_eur_amount_and_more.py  0003_alter_channel_amount_alter_channel_name_and_more.py
apps/notifications/: admin.py  models.py
apps/notifications/migrations/: 0001_initial.py
apps/payments/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py  0002_alter_payment_amount_alter_payment_type.py  0002_payment_paid_at.py  0002_rbpaymentdetails.py  0003_alter_payment_amount_alter_payment_is_paid_and_more.py  0003_alter_rbpaymentdetails_account_id.py  0003_payment_payment_screenshot.py  0004_alter_payment_user_alter_rbpaymentdetails_field1_and_more.py  0004_remove_payment_payment_screenshot.py  0005_payment_payment_screenshot.py
apps/tgusers/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/tgusers/migrations/: 0001_initial.py  0002_alter_startmessage_options_and_more.py  0002_alter_telegramuser_email.py  0002_startmessage.py  (+3 more)
apps/utils/: admin.py  mixins.py
main/: asgi.py  celery.py  database_router.py  settings.py  urls.py  wsgi.py
(+3 files in other folders)
